third_party/move/move-compiler-v2/tests/more-v1/parser/invalid_call_lhs_complex_expression.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/invalid_call_lhs_complex_expression.move:3:29
  │
3 │         (if (true) 5 else 0)();
  │                             ^
  │                             │
  │                             Unexpected '('
  │                             Expected ';'
